set(ARTED_MODULE_LIB_DIR    modules)
set(ARTED_PREP_LIB_DIR      preparation)
set(ARTED_GS_LIB_DIR        GS)
set(ARTED_RT_LIB_DIR        RT)
set(ARTED_COMMON_LIB_DIR    common)
set(ARTED_STENCIL_LIB_DIR   stencil)
set(ARTED_FDTD_LIB_DIR      FDTD)
set(ARTED_CONTROL_LIB_DIR   control)
set(ARTED_PERFCHECK_EXT_DIR perfcheck)

set(ARTED_MODULE_LIB    ${ARTED_LIB}_${ARTED_MODULE_LIB_DIR})
set(ARTED_PREP_LIB      ${ARTED_LIB}_${ARTED_PREP_LIB_DIR})
set(ARTED_GS_LIB        ${ARTED_LIB}_${ARTED_GS_LIB_DIR})
set(ARTED_RT_LIB        ${ARTED_LIB}_${ARTED_RT_LIB_DIR})
set(ARTED_COMMON_LIB    ${ARTED_LIB}_${ARTED_COMMON_LIB_DIR})
set(ARTED_STENCIL_LIB   ${ARTED_LIB}_${ARTED_STENCIL_LIB_DIR})
set(ARTED_FDTD_LIB      ${ARTED_LIB}_${ARTED_FDTD_LIB_DIR})
set(ARTED_CONTROL_LIB   ${ARTED_LIB}_${ARTED_CONTROL_LIB_DIR})
set(ARTED_PERFCHECK_EXT ${ARTED_LIB}_${ARTED_PERFCHECK_EXT_DIR})

add_subdirectory(${ARTED_MODULE_LIB_DIR})
add_subdirectory(${ARTED_PREP_LIB_DIR})
add_subdirectory(${ARTED_GS_LIB_DIR})
add_subdirectory(${ARTED_RT_LIB_DIR})
add_subdirectory(${ARTED_COMMON_LIB_DIR})
add_subdirectory(${ARTED_STENCIL_LIB_DIR})
add_subdirectory(${ARTED_FDTD_LIB_DIR})
add_subdirectory(${ARTED_CONTROL_LIB_DIR})
add_subdirectory(${ARTED_PERFCHECK_EXT_DIR})

add_library(${ARTED_LIB} STATIC main.f90)
add_dependencies(${ARTED_LIB} ${SALMON_MODULE_LIB} ${ARTED_CONTROL_LIB})

list(APPEND SALMON_LINK_LIBRARIES
    ${ARTED_LIB}
    ${ARTED_CONTROL_LIB}
    ${ARTED_PREP_LIB}
    ${ARTED_GS_LIB}
    ${ARTED_RT_LIB}
    ${ARTED_COMMON_LIB}
    ${ARTED_STENCIL_LIB}
    ${ARTED_MODULE_LIB}
    ${ARTED_FDTD_LIB}
    )
set(SALMON_LINK_LIBRARIES ${SALMON_LINK_LIBRARIES} PARENT_SCOPE)
