set(GCEED_MODULE_LIB_DIR  modules)
set(GCEED_MISC_LIB_DIR    misc)
set(GCEED_COMMON_LIB_DIR  common)
set(GCEED_SCF_LIB_DIR     scf)
set(GCEED_RT_LIB_DIR      rt)

set(GCEED_MODULE_LIB  ${GCEED_LIB}_${GCEED_MODULE_LIB_DIR})
set(GCEED_MISC_LIB    ${GCEED_LIB}_${GCEED_MISC_LIB_DIR})
set(GCEED_COMMON_LIB  ${GCEED_LIB}_${GCEED_COMMON_LIB_DIR})
set(GCEED_SCF_LIB     ${GCEED_LIB}_${GCEED_SCF_LIB_DIR})
set(GCEED_RT_LIB      ${GCEED_LIB}_${GCEED_RT_LIB_DIR})

add_subdirectory(${GCEED_MODULE_LIB_DIR})
add_subdirectory(${GCEED_MISC_LIB_DIR})
add_subdirectory(${GCEED_COMMON_LIB_DIR})
add_subdirectory(${GCEED_SCF_LIB_DIR})
add_subdirectory(${GCEED_RT_LIB_DIR})

add_library(${GCEED_LIB} STATIC gceed.f90 read_input_gceed.f90)
add_dependencies(${GCEED_LIB} ${SALMON_MODULE_LIB} ${GCEED_MODULE_LIB} ${GCEED_COMMON_LIB} ${GCEED_SCF_LIB} ${GCEED_RT_LIB})

list(APPEND SALMON_LINK_LIBRARIES
    ${GCEED_LIB}
    ${GCEED_RT_LIB}
    ${GCEED_SCF_LIB}
    ${GCEED_COMMON_LIB}
    ${GCEED_MODULE_LIB}
    ${GCEED_MISC_LIB}
    )
set(SALMON_LINK_LIBRARIES ${SALMON_LINK_LIBRARIES} PARENT_SCOPE)
