set(SOURCES
    pp/input_pp.f90
    pp/salmon_pp.f90
    pp/prep_pp.f90
    pp/Ylm_dYlm.f90
   )

add_library(${SALMON_ATOM_LIB} STATIC ${SOURCES})
add_dependencies(${SALMON_ATOM_LIB} ${SALMON_PARALLEL_LIB} ${SALMON_IO_LIB} ${SALMON_MATH_LIB})
list(APPEND SALMON_LINK_LIBRARIES ${SALMON_ATOM_LIB})
set(SALMON_LINK_LIBRARIES ${SALMON_LINK_LIBRARIES} PARENT_SCOPE)
