set(SOURCES
   hpsi.f90
   stencil.f90
   update_overlap.f90
   )

add_library(${SALMON_COMMON_LIB} STATIC ${SOURCES})
add_dependencies(${SALMON_COMMON_LIB} ${SALMON_MATH_LIB} ${SALMON_IO_LIB} ${SALMON_PARALLEL_LIB} ${SALMON_MISC_LIB})
list(APPEND SALMON_LINK_LIBRARIES ${SALMON_COMMON_LIB})
set(SALMON_LINK_LIBRARIES ${SALMON_LINK_LIBRARIES} PARENT_SCOPE)
