set(MAXWELL_WEYL_LIB_DIR     weyl)
set(MAXWELL_COULOMB_LIB_DIR  coulomb)
set(MAXWELL_EH_LIB_DIR       eh)

set(MAXWELL_WEYL_LIB     ${SALMON_MAXWELL_LIB}_${MAXWELL_WEYL_LIB_DIR})
set(MAXWELL_COULOMB_LIB  ${SALMON_MAXWELL_LIB}_${MAXWELL_COULOMB_LIB_DIR})
set(MAXWELL_EH_LIB       ${SALMON_MAXWELL_LIB}_${MAXWELL_EH_LIB_DIR})

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${MAXWELL_WEYL_LIB_DIR})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${MAXWELL_COULOMB_LIB_DIR})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${MAXWELL_EH_LIB_DIR})

set(SOURCES
    salmon_maxwell.f90
    classic_em.f90
    )

add_library(${SALMON_MAXWELL_LIB} STATIC ${SOURCES})
add_dependencies(${SALMON_MAXWELL_LIB} ${SALMON_PARALLEL_LIB} ${SALMON_IO_LIB})

list(APPEND SALMON_LINK_LIBRARIES 
    ${SALMON_MAXWELL_LIB} 
    ${MAXWELL_WEYL_LIB}
    ${MAXWELL_COULOMB_LIB}
    ${MAXWELL_EH_LIB}
    )
set(SALMON_LINK_LIBRARIES ${SALMON_LINK_LIBRARIES} PARENT_SCOPE)
