set(SOURCES
   )

add_library(${SALMON_RT_LIB} STATIC ${SOURCES})
add_dependencies(${SALMON_RT_LIB} ${SALMON_COMMON_LIB} ${SALMON_IO_LIB} ${SALMON_PARALLEL_LIB} ${SALMON_POISSON_LIB} ${SALMON_XC_LIB})
list(APPEND SALMON_LINK_LIBRARIES ${SALMON_RT_LIB})
set(SALMON_LINK_LIBRARIES ${SALMON_LINK_LIBRARIES} PARENT_SCOPE)
